// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`notifications-flyout/presenters/DismissButtonPresenter renders with all props 1`] = `
<div
  className="hig__notification-v1__dismiss-button"
>
  <button
    className="hig__icon-button hig__icon-button--transparent"
    onClick={[Function]}
    title="HELLO"
  >
    <svg
      className="hig__icon-button__icon"
      viewBox="0 0 16 16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M11.4 5.4l-.8-.8L8 7.3 5.4 4.6l-.8.8L7.3 8l-2.7 2.6.8.8L8 8.7l2.6 2.7.8-.8L8.7 8z"
      />
    </svg>
  </button>
</div>
`;

exports[`notifications-flyout/presenters/DismissButtonPresenter renders without props 1`] = `
<div
  className="hig__notification-v1__dismiss-button"
>
  <button
    className="hig__icon-button hig__icon-button--transparent"
    title="Dismiss featured notification"
  >
    <svg
      className="hig__icon-button__icon"
      viewBox="0 0 16 16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M11.4 5.4l-.8-.8L8 7.3 5.4 4.6l-.8.8L7.3 8l-2.7 2.6.8.8L8 8.7l2.6 2.7.8-.8L8.7 8z"
      />
    </svg>
  </button>
</div>
`;
